@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	8.4 (gritter) 11/10/06";
+	"@(#)/usr/ucb/otfdump.sl	8.5 (gritter) 11/10/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  8.4 (gritter) 11/10/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 8.4 (gritter) 11/10/06";
+static const char sccsid[] USED = "@(#)dpost.sl  8.5 (gritter) 11/10/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 8.5 (gritter) 11/10/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.4 (gritter) 11/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	8.5 (gritter) 11/10/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.4 (gritter) 11/10/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	8.5 (gritter) 11/10/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "8.4";
+const char revision[] = "8.5";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.102 (gritter) 11/5/06
@@ -24,15 +24,15 @@ hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.134 (gritter) 11/10/06
 n2.c: * Sccsid @(#)n2.c	1.39 (gritter) 11/10/06
 n3.c: * Sccsid @(#)n3.c	1.175 (gritter) 11/10/06
-n4.c: * Sccsid @(#)n4.c	1.93 (gritter) 11/9/06
-n5.c: * Sccsid @(#)n5.c	1.117 (gritter) 11/5/06
-n7.c: * Sccsid @(#)n7.c	1.152 (gritter) 11/10/06
+n4.c: * Sccsid @(#)n4.c	1.94 (gritter) 11/10/06
+n5.c: * Sccsid @(#)n5.c	1.118 (gritter) 11/10/06
+n7.c: * Sccsid @(#)n7.c	1.153 (gritter) 11/10/06
 n8.c: * Sccsid @(#)n8.c	1.38 (gritter) 11/6/06
 n9.c: * Sccsid @(#)n9.c	1.66 (gritter) 11/5/06
-ni.c: * Sccsid @(#)ni.c	1.45 (gritter) 10/29/06
+ni.c: * Sccsid @(#)ni.c	1.46 (gritter) 11/10/06
 nii.c: * Sccsid @(#)nii.c	1.47 (gritter) 11/2/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.153 (gritter) 11/5/06
+tdef.h: * Sccsid @(#)tdef.h	1.154 (gritter) 11/10/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.30 (gritter) 9/5/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.48 (gritter) 9/8/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.41 (gritter) 8/12/06
