@@ -4,6 +4,8 @@ Release ...
 * [nt]roff: ".ad p" mode no longer employs a temporary diversion; the
   lines are now written directly to the current output level, possibly
   interrupted by trap processing.
+* [nt]roff: The ".hypp" request now accepts a third argument specifying
+  a penalty for hyphenating the last word of a paragraph.
 * [nt]roff: A memory allocation error that could occur with extensive
   use of output-line traps has been fixed.
 
